# aoc2022

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: push-rust.yml
day1/: Cargo.toml
day1/src/: lib.rs
day2/: Cargo.toml
day2/src/: game.rs  lib.rs  player.rs  round.rs  score.rs  shape.rs  winner.rs
day3/: Cargo.toml
day3/src/: item.rs  lib.rs  rucksack.rs
